--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,55 +19,25 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set outputs
+      - name: Set sha_short
         id: vars
         run: |-
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-          echo "::set-output name=branch::$(git rev-parse --abbrev-ref HEAD)"
-
+          echo "sha_short=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+          # Set default branch name for PRs, as we still want to test build an image on PRs
+          # but we have no branch to set a tag for.
+          branch="test"
+          if [[ "$GITHUB_REF" == "refs/heads/"* ]]; then
+            branch="${GITHUB_REF#refs/heads/}"
+          fi
+          echo "branch=${branch}" >> $GITHUB_ENV
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build Docker Image
-        run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ steps.vars.outputs.branch }}
-
+        run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ env.branch }}
       - name: Push Docker Image
         if: ${{ github.event_name == 'push' }}
         run: |-
-          docker push ${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ steps.vars.outputs.branch }}
-
-      - name: Deploy image to cluster (main)
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        uses: actions-hub/kubectl@v1.24.2
-        env:
-          KUBE_CONFIG: ${{ secrets.CI_KUBECONFIG }}
-        with:
-          args: rollout restart deployment/bot -n prod
-
-      - name: Wait for deployment to be ready (main)
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        uses: actions-hub/kubectl@v1.24.2
-        env:
-          KUBE_CONFIG: ${{ secrets.CI_KUBECONFIG }}
-        with:
-          args: rollout status deployment/bot -n prod
-      
-      - name: Deploy image to cluster (dev)
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/dev' }}
-        uses: actions-hub/kubectl@v1.24.2
-        env:
-          KUBE_CONFIG: ${{ secrets.CI_KUBECONFIG }}
-        with:
-          args: rollout restart deployment/bot -n dev
-
-      - name: Wait for deployment to be ready (dev)
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        uses: actions-hub/kubectl@v1.24.2
-        env:
-          KUBE_CONFIG: ${{ secrets.CI_KUBECONFIG }}
-        with:
-          args: rollout status deployment/bot -n dev
+          docker push ${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ env.branch }}
