--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,8 +36,55 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ env.branch }}
+        run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ env.branch }}-${{ env.sha_short }}
       - name: Push Docker Image
         if: ${{ github.event_name == 'push' }}
         run: |-
-          docker push ${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ env.branch }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ env.branch }}-${{ env.sha_short }}
+###########################################################################################################
+  deploy-kzdv:
+    name: Update KZDV GitOps Repo
+    runs-on: ubuntu-latest
+    needs: build
+    if : ${{ github.event_name == 'push' && contains(fromJson('["refs/heads/main", "refs/tags/v"]'), github.ref) }}
+
+    steps:
+    - name: Set sha_short
+      id: vars
+      run: |-
+        echo "sha_short=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+        # Set default branch name for PRs, as we still want to test build an image on PRs
+        # but we have no branch to set a tag for.
+        branch="test"
+        if [[ "$GITHUB_REF" == "refs/heads/"* ]]; then
+          branch="${GITHUB_REF#refs/heads/}"
+        fi
+        echo "branch=${branch}" >> $GITHUB_ENV
+    - name: Checkout KZDV Gitops Repo
+      uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GH_PIPELINE_PAT }}
+        repository: 'kzdv/gitops'
+        path: gitops
+    - name: Configure git
+      run: |-
+        cd $GITHUB_WORKSPACE/gitops
+        git config user.name "${{ secrets.GH_PIPELINE_USERNAME }}"
+        git config user.email "wm@denartcc.org"
+    - name: Setup Kustomize
+      uses: imranismail/setup-kustomize@v2
+      with:
+        kustomize-version: "4.4.1"
+    - name: Update prod overlay
+      run: |
+        cd $GITHUB_WORKSPACE/gitops/overlays/prod
+        kustomize edit set image denartcc/bot=${{ secrets.DOCKER_USERNAME }}/$SERVICE_NAME:${{ env.branch }}-${{ env.sha_short }}
+    - name: Commit manifests
+      run: |
+        cd $GITHUB_WORKSPACE/gitops
+        git add .
+        git commit -m "Update manifests for bot"
+    - name: Push to gitops repo
+      run: |
+        cd $GITHUB_WORKSPACE/gitops
+        git push origin main
